--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.24.3",
     "firebase": "^11.2.0",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.344.0",
     "motion": "^12.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
     "remixicon": "^4.6.0"
